# hermes-operator

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: hermes-compat.yml
config/: operator.example.toml  outbound.example.toml
deploy/: hermes-operator.service
docs/: ACTIVE_MODE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  CONNECTORS.md  DEPLOYMENT.md  HERMES_INTEGRATION.md  NATIVE_AUTOMATION.md  OPERATING_MODEL.md  PROJECT_SCOPE.md  REMINDERS.md  RUNBOOK.md  THREAT_MODEL.md
integrations/hermes_operator_plugin/: LICENSE  MANIFEST.in  README.md  __init__.py  client.py  compatibility.py  config.py  hooks.py  plugin.yaml  policy.py  pyproject.toml  schemas.py  tools.py
integrations/hermes_operator_plugin/skills/operator-workflow/: SKILL.md
integrations/hermes_operator_plugin/tests/: hermes-host-requirements.txt  test_hermes_host_integration.py  test_plugin.py
scripts/: build_release.py
src/hermes_operator/: __init__.py  api.py  approvals.py  authority.py  cli.py  config.py  connectors.py  db.py  dispatcher.py  inbound.py  llm.py  models.py  native_automation.py  outbound.py  prioritization.py  prompts.py  (+6 more)
tests/: test_adapters.py  test_api.py  test_approvals.py  test_cli.py  test_config.py  test_connectors.py  test_db.py  test_dispatcher.py  test_llm.py  test_native_automation.py  test_outbound.py  test_priority.py  test_projector.py  test_release.py  test_reminders.py  test_runtime.py  test_security.py  test_service.py  test_supervisor.py  test_verifier.py
(+4 files in other folders)
