[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-operator"
version = "0.3.0"
description = "Portable event-driven autonomy control plane for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "@cleenyc" }]
dependencies = []

[project.scripts]
hermes-operator = "hermes_operator.cli:main"
hermes-outbound-broker = "hermes_operator.outbound:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
