[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-operator-plugin"
version = "1.3.0"
description = "Native Hermes bridge for the Hermes Operator control plane"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "@cleenyc" }]
dependencies = []

[tool.setuptools]
packages = ["hermes_operator_plugin"]
package-dir = { hermes_operator_plugin = "." }

[tool.setuptools.package-data]
hermes_operator_plugin = ["plugin.yaml", "skills/**/*.md"]
